--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Patua+One&display=swap');
+@import url('https://fonts.googleapis.com/css?family=ABeeZee&display=swap');
 
 /* ESTILOS GENERALES */
 * {
@@ -22,10 +23,10 @@ a {
 
 body {
   font-family: 'ABeeZee', sans-serif;
+  text-align: center;
 }
 
 .logoHistory {
-  /* height: 40px; */
   width: 180px;
 }
 
@@ -35,10 +36,6 @@ body {
   font-size: 1.1rem;
   min-height: 100px;
 }
-
-/* .nav-link {
-  color: #000;
-} */
 
 .nav-link:hover {
   color: crimson;
@@ -86,10 +83,10 @@ body {
 
 /* ESTILOS PARA LA SECCION DE IMAGENES */
 
-/* No funciona */
-/* .backgroundB {
+.backgroundB {
   background-color: black;
-} */
+  margin: 20px 0 ;
+}
 
 .container-img {
   border-radius: 10px;
@@ -120,4 +117,17 @@ body {
   bottom: 25px;
   left: 25px;
   z-index: 100;
+}
+
+
+/* ESTILOS DE LA SECTION DEL FORMULARIO */
+
+.separation {
+  padding-top: 200px;
+}
+
+.footer {
+  background-color: black;
+  margin-top: 200px;
+  padding: 90px 0;
 }
