--- a/style/style.css
+++ b/style/style.css
@@ -16,6 +16,7 @@ li {
 }
 
 a {
+  color: inherit;
   text-decoration: none;
 }
 
@@ -130,4 +131,8 @@ body {
   background-color: black;
   margin-top: 200px;
   padding: 90px 0;
+}
+
+.icon {
+  width: 50px;
 }
