Agregar instrucciones para la seccion de personajes y agregar seccion de validacion

--- a/style/style.css
+++ b/style/style.css
@@ -84,6 +84,11 @@ body {
 
 /* ESTILOS PARA LA SECCION DE IMAGENES */
 
+.instruc {
+  color: white;
+  font-size: 20px;
+}
+
 .backgroundB {
   background-color: black;
   margin: 20px 0 ;
